--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,4 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "jsx": "react-jsx",
-    "baseUrl": "src"
-  },
+  "compilerOptions": {},
   "include": ["src"]
 }
