--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
