--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
