--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "react-slick": "^0.31.0",
+    "serve": "^14.2.5",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^12.0.2"
